ikiwiki (3.20150330) UNRELEASED; urgency=medium

  * Re-remove google from openid selector; their openid provider is
    gone for good.
  * When openid and passwordauth are the only enabled auth plugins,
    make the openid selector display "Password" instead of "Other",
    so users are more likely to click on it when they don't have an openid.

 -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400

ikiwiki (3.20150329) experimental; urgency=high

  [ Joey Hess ]
  * Fix NULL ptr deref on ENOMEM in wrapper. (Thanks, igli)

  [ Simon McVittie ]
  * Really don't double-decode CGI submissions, even on Perl versions that
    bundle an old enough Encode.pm for that not to be a problem: the
    system might have a newer Encode.pm installed separately, like Fedora 20.
    (Closes: #776181; thanks, Anders Kaseorg)
  * If neither timezone nor TZ is set, set both to :/etc/localtime if
    we're on a GNU system and that file exists, or GMT otherwise
  * t/inline.t: accept translations of "Add a new post titled:"
    (Closes: #779365)
  * Consistently document command-line options as e.g. --refresh, not -refresh

  [ Amitai Schlair ]
  * In VCS-committed anonymous comments, link to url.

  [ Joey Hess ]
  * Fix XSS in openid selector. Thanks, Raghav Bisht. (Closes: #781483)

 -- Simon McVittie <smcv@debian.org>  Sun, 29 Mar 2015 21:48:24 +0100

ikiwiki (3.20150107) experimental; urgency=medium

  [ Joey Hess ]
  * Added ikiwiki-comment program.
  * Add missing build-depends on libcgi-formbuilder-perl, needed for
    t/relativity.t
  * openid: Stop suppressing the email field on the Preferences page.
  * Set Debian package maintainer to Simon McVittie as I'm retiring from
    Debian.

  [ Simon McVittie ]
  * calendar: add calendar_autocreate option, with which "ikiwiki --refresh"
    can mostly supersede the ikiwiki-calendar command.
    Thanks, Louis Paternault
  * search: add more classes as a hook for CSS. Thanks, sajolida