@@ -5,6 +5,8 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
   * When openid and passwordauth are the only enabled auth plugins,
     make the openid selector display "Password" instead of "Other",
     so users are more likely to click on it when they don't have an openid.
+  * Converted openid-selector into a more generic loginselector helper
+    plugin.
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
